<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_post"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.appsco.bunch.PostActivity">


    <TextView
        android:text="@string/StudyGroupNew"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Header"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        android:textColor="@android:color/black" />

    <TextView
        android:text="@string/When"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/when"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp"
        android:textColor="@android:color/black" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:layout_marginTop="11dp"
        android:id="@+id/editDate"
        android:hint="MM/DD/YY"
        android:layout_below="@+id/when"
        android:layout_toEndOf="@+id/where"
        style="@android:style/Widget.Holo.Light.Spinner"
        android:textColorHint="@color/hintTextColor" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="time"
        android:ems="10"
        android:id="@+id/time"
        android:hint = "@string/Time"
        android:layout_below="@+id/editDate"
        android:layout_alignStart="@+id/editDate"
        style="@android:style/Widget.Holo.Spinner"
        android:textColorHint="@color/hintTextColor" />

    <TextView
        android:text="@string/Where"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/where"
        android:fontFamily="sans-serif"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/editDate"
        android:layout_alignParentStart="true"
        android:textColor="@android:color/black" />

    <TextView
        android:text="@string/Class"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/whichClass"
        android:fontFamily="sans-serif"
        android:layout_below="@+id/editWhere"
        android:layout_alignParentStart="true"
        android:textColor="@android:color/black" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/editClass"
        android:hint="@string/ClassHint"
        android:layout_below="@+id/whichClass"
        android:layout_alignStart="@+id/editWhere"
        android:textColorHint="@color/hintTextColor" />

    <TextView
        android:text="@string/Intensity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/studyingIntensity"
        android:fontFamily="sans-serif"
        android:layout_below="@+id/editClass"
        android:layout_alignParentStart="true"
        android:textColor="@android:color/black" />

    <TextView
        android:text="@string/MaxPeople"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/maxPeople"
        android:fontFamily="sans-serif"
        android:layout_below="@+id/ratingBar"
        android:layout_alignParentStart="true"
        android:textColor="@android:color/black" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editMaxPeople"
        android:hint="@string/PeopleHint"
        android:layout_below="@+id/maxPeople"
        android:layout_alignStart="@+id/editClass"
        android:textColorHint="@color/hintTextColor" />

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ratingBar"
        android:layout_below="@+id/studyingIntensity"
        android:layout_toEndOf="@+id/when" />

    <Button
        android:text="CANCEL"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:id="@+id/cancel"
        android:layout_marginLeft="10dp"
        android:background="@color/buttonBackground" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:hint="@string/LocationHint"
        android:id="@+id/editWhere"
        android:layout_below="@+id/where"
        android:layout_toEndOf="@+id/where"
        android:textColorHint="@color/hintTextColor" />

    <Button
        android:text="Add Study Group"
        android:layout_height="wrap_content"
        android:id="@+id/addEvent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="10dp"
        android:layout_width="150dp"
        android:background="@color/buttonBackground" />


</RelativeLayout>
