<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.appsco.bunch.ProfileActivity"
    android:background="@android:color/background_light">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:background="@android:color/background_light">

        <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:id="@+id/textViewUserEmail"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/editFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/NameHint"
            android:layout_below ="@id/textViewUserEmail"
            android:layout_marginTop="25dp"
            android:typeface="normal"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/editLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/LNameHint"
            android:layout_below = "@id/editFirstName"
            android:typeface="normal"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/editCollege"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/CollegeHint"
            android:layout_below = "@id/editCollege"
            android:typeface="normal"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/editMajor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/MajorHint"
            android:layout_below = "@id/editMajor"
            android:typeface="normal" />

        <EditText
            android:id="@+id/editYear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/YearHint"
            android:layout_below = "@id/editYear"
            android:typeface="normal"
            android:textColor="@android:color/black" />

        <Button
            android:id = "@+id/buttonSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text = "Save Information"
            android:layout_below = "@id/editFirstName"
            android:layout_marginTop="25dp"
            android:textColor="@color/colorAccent"
            android:background="@color/buttonBackground" />


        <Button
            android:text="Logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:id="@+id/buttonLogout"
            android:layout_gravity="center"
            android:layout_below="@id/buttonSave"
            android:textColor="@color/colorAccent"
            android:background="@color/buttonBackground"
            android:layout_marginTop="10dp" />

    </LinearLayout>

</RelativeLayout>
