<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.appsco.bunch.MainActivity"
    android:background= "@drawable/studybackground"
    android:backgroundTint="@android:color/darker_gray"
    android:backgroundTintMode="screen">


    <ImageView
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:src="@drawable/bunchlogo"
        android:id="@+id/imageView"
        android:layout_marginTop="28dp"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent"
        android:layout_marginTop="68dp"
        android:layout_below="@+id/imageView"
        android:layout_alignParentStart="true">

        <EditText
            android:inputType="textEmailAddress"
            android:hint="@string/EmailHint"
            android:id = "@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@android:style/Widget.Material.Light.EditText"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:background="@android:drawable/edit_text"
            tools:typeface="normal"
            android:typeface="normal" />

        <EditText
            android:inputType = "textPassword"
            android:hint="@string/PWhint"
            android:id = "@+id/editTextPassWord"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@android:style/Widget.Material.Light.EditText"
            android:textAlignment="center"
            android:background="@android:drawable/edit_text"
            android:textColor="@android:color/black"
            tools:typeface="normal"
            android:typeface="normal"
            tools:textStyle="normal" />


        <Button
            android:id = "@+id/buttonRegister"
            android:text = "@string/register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:background="@color/buttonBackground" />


        <!--<com.facebook.login.widget.LoginButton-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:id = "@+id/fb_login_bn"-->
            <!--android:layout_alignParentTop="true"-->
            <!--android:layout_centerHorizontal="true"></com.facebook.login.widget.LoginButton>-->

        <TextView
            android:id="@+id/textViewSignin"
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            android:text="Already Registerd? Sign in here"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:typeface="sans" />

    </LinearLayout>


</RelativeLayout>
